# flask-ecommerce-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  enums.py  extensions.py  models.py  repositories.py
app/blueprints/api/: __init__.py  admin.py  auth.py  cart.py  orders.py  payments.py  products.py
app/schemas/: cart.py  orders.py  payments.py  products.py  responses.py  users.py
app/services/: __init__.py  cart_service.py  fraud_service.py  helpers.py  order_service.py  payment_service.py  product_service.py  user_service.py
app/utils/: auth_handlers.py  cli_commands.py  error_handlers.py  responses.py  security.py
migrations/versions/: e3e756ce33bf_initial_migration.py  e414a285e9d6_initial_migration.py
scripts/: call_fraud_service.py  generate_headers.py
seeds/: products.json  users.json
tests/: conftest.py
tests/test_api/: conftest.py  test_admin.py  test_auth.py  test_cart.py  test_orders.py  test_payments.py  test_products.py
tests/test_services/: conftest.py  test_cart_service.py  test_fraud_service.py  test_order_service.py  test_payment_service.py
